# tollkeeper

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: airflow.md  api.md  backends.md  docker-testing.md  dq-checks.md  getting-started.md  index.md  signal-store.md  sql-lineage.md  sql-strategy-flow.md
src/tollkeeper/: __init__.py  core.py
src/tollkeeper/backends/: base.py  csv.py  iceberg.py  sql_passthrough.py
src/tollkeeper/checks/: base.py  polars.py
src/tollkeeper/signals/: __init__.py  base.py  dbapi.py  sqlite.py
src/write_audit_publish/: __init__.py  core.py  parser.py
src/write_audit_publish/backends/: base.py  csv.py  iceberg.py
src/write_audit_publish/checks/: base.py  polars.py
src/write_audit_publish/signals/: base.py  dbapi.py  sqlite.py
test_dags/: example_postgres_sql.py  example_presto_sql.py  example_snowflake_sql.py  example_spark_sql.py  example_trino_sql.py
tests/: conftest.py  test_core.py  test_csv_backend.py  test_iceberg_backend.py  test_integration.py  test_parser.py  test_polars_checks.py  test_signals.py  test_sql_passthrough_backend.py
