[project]
name = "write-audit-publish"
version = "0.1.0"
description = "A module to manage the write-audit-publish paradigm with iceberg"
readme = "README.md"
authors = [
    { name = "Sadha Chilukoori", email = "srchilukoori@gmail.com" }
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "pyiceberg>=0.9.0",
    "polars>=1.0.0",
]

[dependency-groups]
dev = [
    "pyarrow>=24.0.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "sqlalchemy>=2.0.51",
    "ty>=0.0.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/write_audit_publish"]

[tool.pytest.ini_options]
addopts = "--cov=write_audit_publish --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["write_audit_publish"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"
