[project]
name = "tollkeeper"
version = "0.1.0b1"
description = "Python library for the Write-Audit-Publish pattern. Stage writes, run data quality checks, publish only when checks pass. Pluggable backends, SQL lineage parsing, and Airflow integration."
readme = "README.md"
authors = [
    { name = "Sadha Chilukoori", email = "srchilukoori@gmail.com" }
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
polars = ["polars>=1.0.0"]
iceberg = ["pyiceberg>=0.9.0"]
sql = ["sqlglot>=26.0"]
all = ["tollkeeper[polars,iceberg,sql]"]

[dependency-groups]
dev = [
    "tollkeeper[all]",
    "pyarrow>=24.0.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "sqlalchemy>=2.0.51",
    "ty>=0.0.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tollkeeper"]

[tool.pytest.ini_options]
addopts = "--cov=tollkeeper --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["tollkeeper"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"
